// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/basic.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.md correctly 1`] = `
<span
  class="ant-dropdown-trigger"
  style="user-select:none"
>
  Right Click on Me
</span>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.md correctly 1`] = `
<div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default ant-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="anticon"
        data-icon="ellipsis"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <circle
          cx="232"
          cy="511"
          r="56"
        />
        <circle
          cx="512"
          cy="511"
          r="56"
        />
        <circle
          cx="792"
          cy="511"
          r="56"
        />
      </svg>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
    style="margin-left:8px"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="anticon"
        data-icon="ellipsis"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <circle
          cx="232"
          cy="511"
          r="56"
        />
        <circle
          cx="512"
          cy="511"
          r="56"
        />
        <circle
          cx="792"
          cy="511"
          r="56"
        />
      </svg>
    </button>
  </div>
  <button
    class="ant-btn ant-dropdown-trigger"
    style="margin-left:8px"
    type="button"
  >
    <span>
      Button 
    </span>
    <svg
      aria-hidden="true"
      class="anticon"
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me, Click menu item 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;

exports[`renders ./components/dropdown/demo/item.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;

exports[`renders ./components/dropdown/demo/overlay-visible.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;

exports[`renders ./components/dropdown/demo/placement.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/sub-menu.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Cascading menu 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Click me 
  <svg
    aria-hidden="true"
    class="anticon"
    data-icon="down"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
    />
  </svg>
</a>
`;
